--- a/src/input.css
+++ b/src/input.css
@@ -7,11 +7,11 @@ body {
 }
 
 .navbar-fixed {
-  @apply fixed bottom-2 left-1/2 -translate-x-1/2 rounded-3xl bg-dark-2 bg-opacity-80 py-4;
+  @apply fixed bottom-2 left-1/2 -translate-x-1/2 rounded-lg bg-dark-2 bg-opacity-90 py-2;
 }
 
 .navbar-item {
-  @apply mx-3 flex h-10 w-10 items-center justify-center rounded-full border-2 border-sage-3 text-sage-3 hover:border-sage-3 hover:bg-sage-3 hover:text-white md:mx-4 lg:mx-8;
+  @apply mx-3 flex h-10 w-10 items-center justify-center rounded-full border-0  text-sage-3  hover:bg-sage-3 hover:text-white md:mx-4 lg:mx-8;
 }
 
 .countdown-list {
