--- a/src/input.css
+++ b/src/input.css
@@ -23,5 +23,5 @@ body {
 }
 
 .button {
-  @apply inline-flex items-center gap-1 rounded-full bg-sage-4 bg-gradient-to-r px-4 py-3 font-sans text-xs font-semibold uppercase text-white transition duration-300 ease-in-out hover:scale-110 hover:opacity-80 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-sage-3 md:gap-3 md:px-6 md:text-base lg:px-8;
+  @apply inline-flex items-center gap-1 rounded-full bg-sage-4 px-4 py-3 font-sans text-xs font-semibold uppercase text-white transition duration-300 ease-in-out hover:scale-110 hover:opacity-80 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-sage-3 md:gap-3 md:px-6 md:text-base lg:px-8;
 }
